--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,21 +115,23 @@ services:
     # MySQL
     database:
         image: mariadb:10.3
-        container_name: dso_database
+        container_name: dso_db
         hostname: database
+        cap_add:
+            - SYS_NICE
         restart: always
         volumes:
-            - db_data:/var/lib/mysql
-            - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+            - db_data:/var/lib/mysql/
+            #- ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
         env_file:
             - ".env"
         environment:
-            - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
             - MYSQL_DATABASE=${DATABASE_NAME}
             - MYSQL_USER=${DATABASE_USER}
             - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+            - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
         ports:
-          - "3307:3306"
+            - '3306:3306'
         networks:
           - dso_stack
 
