--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,24 +1,16 @@
-parameters:
-    # Adds a fallback DATABASE_URL if the env var is not set.
-    # This allows you to run cache:warmup even if your
-    # environment variables are not available yet.
-    # You should not need to change this value.
-    #env(DATABASE_URL): ''
-
 doctrine:
     dbal:
-        # configure these for your database server
-        driver: 'pdo_mysql'
+        url: '%env(resolve:DATABASE_URL)%'
+        #driver: pdo_mysql
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
-#        url: '%env(DATABASE_URL)%'
-        host: '%env(DATABASE_HOST)%'
-        port: '%env(DATABASE_PORT)%'
-        user: '%env(DATABASE_USER)%'
-        password: '%env(DATABASE_PASSWORD)%'
-        dbname: '%env(DATABASE_NAME)%'
+        #host: '%env(DATABASE_HOST)%'
+        #port: '%env(DATABASE_PORT)%'
+        #user: '%env(DATABASE_USER)%'
+        #password: '%env(DATABASE_PASSWORD)%'
+        #dbname: '%env(DATABASE_NAME)%'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
