Fix Dockerfile PHP

--- a/.env.dist
+++ b/.env.dist
@@ -12,6 +12,7 @@ APP_SECRET=
 TRUSTED_HOSTS=localhost
 MEMCACHED_URL=memcached://memcached:11211
 REDIS_URL=redis://localhost:6379
+VAR_DUMPER_SERVER=
 
 # DOCKER
 SYMFONY_APP_PATH=
