--- a/composer.json
+++ b/composer.json
@@ -2,57 +2,85 @@
     "type": "project",
     "version": "1.4.0",
     "license": "proprietary",
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
+    },
     "require": {
-        "php": "^8.1.0",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
-        "doctrine/doctrine-bundle": "^2",
-        "doctrine/doctrine-migrations-bundle": "^2",
-        "doctrine/orm": "^2",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.10",
+        "league/commonmark": "^2.1",
+        "symfony/apache-pack": "^1.0",
+        "symfony/asset": "^6.2",
+        "symfony/console": "^6.2",
+        "symfony/dotenv": "^6.2",
+        "symfony/expression-language": "^6.2",
+        "symfony/flex": "^2.0",
+        "symfony/form": "^6.2",
+        "symfony/framework-bundle": "^6.2",
+        "symfony/html-sanitizer": "^6.2",
+        "symfony/http-client": "^6.2",
+        "symfony/intl": "^6.2",
+        "symfony/mailer": "^6.2",
+        "symfony/google-mailer": "6.2.*",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/polyfill-intl-messageformatter": "^1.12",
+        "symfony/runtime": "^6.2",
+        "symfony/security-bundle": "^6.2",
+        "symfony/string": "^6.2",
+        "symfony/translation": "^6.2",
+        "symfony/twig-bundle": "^6.2",
+        "symfony/validator": "^6.2",
+        "symfony/webpack-encore-bundle": "^1.13",
+        "symfony/yaml": "^6.2",
+        "twig/extra-bundle": "^3.3",
+        "twig/intl-extra": "^3.3",
+        "twig/markdown-extra": "^3.3",
         "excelwebzone/recaptcha-bundle": "^1.5",
         "friendsofsymfony/rest-bundle": "^3.0",
         "hamhamfonfon/astrobin-ws": "^2.4",
-        "jms/serializer-bundle": "^3.3",
         "lexik/jwt-authentication-bundle": "^2.6",
-        "ruflin/elastica": "^6.0",
-        "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "^5.4",
-        "symfony/console": "^5.4",
-        "symfony/dotenv": "^5.4",
-        "symfony/expression-language": "^5.4",
-        "symfony/flex": "^1.1",
-        "symfony/form": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/google-mailer": "5.4.*",
-        "symfony/http-client": "5.4.*",
-        "symfony/intl": "^5.4",
-        "symfony/mailer": "5.4.*",
-        "symfony/monolog-bundle": "^3.6",
-        "symfony/process": "5.4.*",
-        "symfony/proxy-manager-bridge": "^5.4",
-        "symfony/requirements-checker": "^1.1",
-        "symfony/security-bundle": "^5.4",
-        "symfony/serializer": "^5.4",
-        "symfony/stopwatch": "^5.4",
-        "symfony/templating": "^5.4",
-        "symfony/translation": "^5.4",
-        "symfony/twig-bundle": "^5.4",
-        "symfony/validator": "^5.4",
-        "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "^5.4",
-        "twig/twig": "^3.0"
+        "ruflin/elastica": "^7.0",
+        "symfony/proxy-manager-bridge": "^5.4"
+    },
+    "require-dev": {
+      "dama/doctrine-test-bundle": "^7.0",
+      "doctrine/doctrine-fixtures-bundle": "^3.4",
+      "roave/security-advisories": "dev-latest",
+      "symfony/browser-kit": "^6.2",
+      "symfony/css-selector": "^6.2",
+      "symfony/debug-bundle": "^6.2",
+      "symfony/maker-bundle": "^1.36",
+      "symfony/var-dumper": "^5.4",
+      "symfony/stopwatch": "^6.2",
+      "symfony/web-profiler-bundle": "^6.2"
     },
     "config": {
+        "allow-plugins": {
+            "symfony/flex": true,
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
+        },
+      "platform": {
+          "php": "8.1.0"
+        },
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true,
-        "allow-plugins": {
-            "symfony/flex": true
-        }
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -64,19 +92,10 @@
             "App\\Tests\\": "tests/"
         }
     },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "requirements-checker": "script"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -91,13 +110,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.2.*"
         }
-    },
-    "require-dev": {
-        "roave/security-advisories": "dev-latest",
-        "symfony/maker-bundle": "^1.12",
-        "symfony/var-dumper": "^5.4",
-        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
