--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,25 @@
+# https://symfony.com/doc/current/routing.html#localized-routing-i18n
+web_controllers:
+    resource: ../src/Controller/
+    type: annotation
+    prefix:
+        en: /
+        fr: /{_locale}
+        de: /{_locale}
+        es: /{_locale}
+        pt: /{_locale}
+    requirements:
+        _locale: '%app_locales%'
+    defaults:
+        _locale: '%locale%'
+
+# Controller for Rest API
+rest_controller:
+    resource: ../../src/ControllerApi/
+    type: annotation
+    prefix: /api
+
+
 api_auth_login:
     path: /api/auth/login
     methods:  [POST]
@@ -5,3 +27,4 @@ api_auth_login:
 gesdinet_jwt_refresh_token:
     path:       /api/token/refresh
     controller: gesdinet.jwtrefreshtoken::refresh
+
