Update mapping elasticsearch for ES 7.17

--- a/config/elasticsearch/mappings/deepspaceobjects.mapping.json
+++ b/config/elasticsearch/mappings/deepspaceobjects.mapping.json
@@ -10,157 +10,151 @@
     }
   },
   "mappings": {
-    "_doc": {
-      "properties": {
-        "id": {
-          "type": "text",
-          "fields": {
-            "raw": {
-              "type": "keyword"
-            }
-          },
-          "copy_to": "suggest"
-        },
-        "catalog": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
+    "properties": {
+      "id": {
+        "type": "text",
+        "fields": {
+          "raw": {
+            "type": "keyword"
           }
         },
-        "order": {
-          "type": "integer",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
+        "copy_to": "suggest"
+      },
+      "catalog": {
+        "type": "text",
+        "fields": {
+          "keyword": {
+            "type": "keyword"
           }
-        },
-        "updated_at": {
-          "type": "date",
-          "format": "yyyy-MM-dd||yyyy-MM-dd'T'HH:mm:ssZ"
-        },
-        "geometry": {
-          "type": "geo_shape"
-        },
-        "desigs": {
-          "type": "keyword",
-          "normalizer": "lowercase_normalizer",
-          "copy_to": "suggest"
-        },
-        "alt": {
-          "properties": {
-            "alt" :{
-              "type": "text",
-              "fields": {
-                "en": {
-                  "type": "text",
-                  "analyzer": "english"
-                },
-                "fr": {
-                  "type": "text",
-                  "analyzer": "french"
-                },
-                "es": {
-                  "type": "text",
-                  "analyzer": "spanish"
-                },
-                "de": {
-                  "type": "text",
-                  "analyzer": "german"
-                },
-                "pt": {
-                  "type": "text",
-                  "analyzer": "portuguese"
-                },
-                "it": {
-                  "type": "text",
-                  "analyzer": "italian"
-                }
-              }
-            }
-          }
-        },
-        "description": {
-          "properties": {
-            "description" :{
-              "type": "text",
-              "fields": {
-                "en": {
-                  "type": "text",
-                  "analyzer": "english"
-                },
-                "fr": {
-                  "type": "text",
-                  "analyzer": "french"
-                },
-                "es": {
-                  "type": "text",
-                  "analyzer": "spanish"
-                },
-                "de": {
-                  "type": "text",
-                  "analyzer": "german"
-                },
-                "pt": {
-                  "type": "text",
-                  "analyzer": "portuguese"
-                },
-                "it": {
-                  "type": "text",
-                  "analyzer": "italian"
-                }
-              }
-            }
-          }
-        },
-        "type": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
-          }
-        },
-        "mag": {
-          "type": "float"
-        },
-        "const_id": {
-          "type": "text",
-          "fields": {
-            "keyword": {
-              "type": "keyword"
-            }
-          }
-        },
-        "dim": {
-          "type": "text"
-        },
-        "cl": {
-          "type": "text"
-        },
-        "dist_al": {
-          "type": "float"
-        },
-        "discover": {
-          "type": "text"
-        },
-        "discover_year": {
-          "type": "float"
-        },
-        "ra": {
-          "type": "text"
-        },
-        "dec": {
-          "type": "text"
-        },
-        "astrobin_id": {
-          "type": "text"
-        },
-        "suggest": {
-          "type" : "completion"
         }
+      },
+      "order": {
+        "type": "integer",
+        "fields": {
+          "keyword": {
+            "type": "keyword"
+          }
+        }
+      },
+      "updated_at": {
+        "type": "date",
+        "format": "strict_date_optional_time||epoch_second"
+      },
+      "geometry": {
+        "type": "geo_shape"
+      },
+      "desigs": {
+        "type": "keyword",
+        "normalizer": "lowercase_normalizer",
+        "copy_to": "suggest"
+      },
+      "alt": {
+        "properties": {
+          "language": {
+            "type": "keyword"
+          },
+          "en": {
+            "type": "text",
+            "analyzer": "english"
+          },
+          "fr": {
+            "type": "text",
+            "analyzer": "french"
+          },
+          "es": {
+            "type": "text",
+            "analyzer": "spanish"
+          },
+          "de": {
+            "type": "text",
+            "analyzer": "german"
+          },
+          "pt": {
+            "type": "text",
+            "analyzer": "portuguese"
+          },
+          "it": {
+            "type": "text",
+            "analyzer": "italian"
+          }
+        }
+      },
+      "description": {
+        "properties": {
+          "language": {
+            "type": "keyword"
+          },
+          "en": {
+            "type": "text",
+            "analyzer": "english"
+          },
+          "fr": {
+            "type": "text",
+            "analyzer": "french"
+          },
+          "es": {
+            "type": "text",
+            "analyzer": "spanish"
+          },
+          "de": {
+            "type": "text",
+            "analyzer": "german"
+          },
+          "pt": {
+            "type": "text",
+            "analyzer": "portuguese"
+          },
+          "it": {
+            "type": "text",
+            "analyzer": "italian"
+          }
+        }
+      },
+      "type": {
+        "type": "text",
+        "fields": {
+          "keyword": {
+            "type": "keyword"
+          }
+        }
+      },
+      "mag": {
+        "type": "float"
+      },
+      "const_id": {
+        "type": "text",
+        "fields": {
+          "keyword": {
+            "type": "keyword"
+          }
+        }
+      },
+      "dim": {
+        "type": "text"
+      },
+      "cl": {
+        "type": "text"
+      },
+      "dist_al": {
+        "type": "float"
+      },
+      "discover": {
+        "type": "text"
+      },
+      "discover_year": {
+        "type": "float"
+      },
+      "ra": {
+        "type": "text"
+      },
+      "dec": {
+        "type": "text"
+      },
+      "astrobin_id": {
+        "type": "text"
+      },
+      "suggest": {
+        "type": "completion"
       }
     }
   }
