--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,8 +1,8 @@
-# Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
+# Read the documentation: https://fosrestbundle.readthedocs.io/en/3.x/
 fos_rest:
-    param_fetcher_listener: true
+#    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
-#    routing_loader: true
+    routing_loader: false
 #    view:
 #        view_response_listener:  true
 #    exception:
