Configuration FOS Rest

--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,10 +1,11 @@
 # Read the documentation: https://fosrestbundle.readthedocs.io/en/3.x/
 fos_rest:
-#    param_fetcher_listener:  true
-#    allowed_methods_listener:  true
+    param_fetcher_listener:  true
+    body_listener: true
+    allowed_methods_listener:  true
     routing_loader: false
-#    view:
-#        view_response_listener:  true
+    view:
+        view_response_listener:  true
 #    exception:
 #        codes:
 #            App\Exception\MyException: 403
