Force JSON response for API

--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -5,6 +5,7 @@ fos_rest:
     allowed_methods_listener:  true
     routing_loader: false
     view:
+        format: json
         view_response_listener:  true
 #    exception:
 #        codes:
