--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -5,7 +5,8 @@ fos_rest:
     allowed_methods_listener:  true
     routing_loader: false
     view:
-        format: json
+        format:
+            - json
         view_response_listener:  true
 #    exception:
 #        codes:
