--- a/.env.dist
+++ b/.env.dist
@@ -94,3 +94,7 @@ GMAIL_APP_PWD=
 
 # Analytics
 GOOGLE_ANALYTICS_ID=
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
