--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,10 +1,23 @@
 nelmio_cors:
     defaults:
+        allow_credentials: false
+        allow_origin: [ ]
+        allow_headers: [ ]
+        allow_methods: [ ]
+        expose_headers: [ ]
         origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
-        expose_headers: ['Link']
         max_age: 3600
     paths:
-        '^/': null
+        '^/api/':
+            allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
+            allow_headers: ['Content-Type', 'Authorization', 'Accept']
+            allow_methods: [ 'GET' ]
+            expose_headers: true
+            max_age: 3600
+        '^/':
+            origin_regex: true
+            allow_origin: ['^http://localhost:[0-9]+']
+            allow_headers: ['Content-Type', 'Authorization', 'Accept']
+            allow_methods: [ 'GET' ]
+            max_age: 3600
+            hosts: ['^api\.']
