--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -11,13 +11,13 @@ nelmio_cors:
         '^/api/':
             allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
             allow_headers: ['Content-Type', 'Authorization', 'Accept']
-            allow_methods: [ 'GET', 'POST' ]
+            allow_methods: [ 'GET', 'POST', 'OPTIONS' ]
             expose_headers: true
             max_age: 3600
         '^/':
             origin_regex: true
             allow_origin: ['^http://localhost:[0-9]+']
             allow_headers: ['Content-Type', 'Authorization', 'Accept']
-            allow_methods: [ 'GET', 'POST' ]
+            allow_methods: [ 'GET', 'POST', 'OPTIONS' ]
             max_age: 3600
             hosts: ['^api\.']
