--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -2,6 +2,8 @@
 fos_rest:
     param_fetcher_listener:  true
     body_listener: true
+    body_converter:
+        enabled: true
     allowed_methods_listener:  true
     routing_loader: false
     view:
