--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -4,6 +4,8 @@ fos_rest:
     body_listener: true
     body_converter:
         enabled: true
+        validate: true
+        validation_errors_argument: validationErrors
     allowed_methods_listener:  true
     routing_loader: false
     view:
