sension extra fw config

--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -1,3 +1,2 @@
 sensio_framework_extra:
-    request:
-      {  enable: true, converters: true, auto_convert: true }
+    request: { enable: true, converters: true, auto_convert: true }
