--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -17,4 +17,8 @@ web_controllers:
 rest_controller:
     resource: ../../src/ControllerApi/
     type: annotation
-    prefix: /api
+    prefix: /api/{_locale}
+    requirements:
+        _locale: '%app_locales%'
+    defaults:
+        _locale: '%locale%'
