--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -17,7 +17,9 @@ web_controllers:
 rest_controller:
     resource: ../../src/ControllerApi/
     type: annotation
-    prefix: /api/{_locale}
+    prefix: 
+    	en: /api
+    	fr: /api/{_locale}
     requirements:
         _locale: '%app_locales%'
     defaults:
