align lang and search to the right

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -18,8 +18,11 @@ rest_controller:
     resource: ../../src/ControllerApi/
     type: annotation
     prefix: 
-    	en: /api
-    	fr: /api/{_locale}
+        en: /api
+        fr: /api/{_locale}
+        de: /api/{_locale}
+        es: /api/{_locale}
+        pt: /api/{_locale}
     requirements:
         _locale: '%app_locales%'
     defaults:
