--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,25 +16,25 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         api_register:
-            pattern:  ^/api/auth/register
+            pattern:  ^/v1/auth/register
             stateless: true
             anonymous: true
         api_login:
-            pattern: ^/api/auth/login
+            pattern: ^/v1/auth/login
             stateless: true
             anonymous: true
             provider: api_entity_provider
             json_login:
-                check_path: /api/auth/login
+                check_path: /v1/auth/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
         api_refresh:
-            pattern:  ^/api/token/refresh
+            pattern:  ^/v1/token/refresh
             stateless: true
             anonymous: true
         api:
-            pattern:  ^/api
+            pattern:  ^/v1
             stateless: true
             anonymous: false
             provider: api_entity_provider
@@ -48,7 +48,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY}
+        - { path: ^/v1/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/v1/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/v1/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/v1, roles: IS_AUTHENTICATED_FULLY}
