--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -1,6 +1,3 @@
 sensio_framework_extra:
     request: { converters: true, auto_convert: true }
-    router:
-        annotations: true
-        defaults:
-            locale: '%locale%'
+    router: { annotations: true }
