Set parameter set_locale_from_accept_language

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,5 +17,5 @@ framework:
     trusted_hosts: '%env(TRUSTED_HOSTS)%'
     form: true
     validation: { enable_annotations: true }
-    set_locale_from_accept_language: false
+    set_locale_from_accept_language: true
     set_content_language_from_locale: false
