--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,8 @@ services:
             string $senderMail: '%env(SENDER_MAIL)%'
             string $tipeeeLink: '%tipeee.link%'
             string $twitterLink: '%twitter.link%'
+    Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
+            
     App\EventSubscriber\LocaleSubscriber:
         arguments: ['%kernel.default_locale%']
         tags: 
