Change mercure configuration

--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -1,5 +1,7 @@
 mercure:
-    hubs:
-        default:
-            url: '%env(MERCURE_URL)%'
-            jwt: '%env(MERCURE_JWT_SECRET)%'
+  hubs:
+    name:
+      url: '%env(MERCURE_URL)%'
+      public_url: '%env(MERCURE_PUBLIC_URL)%'
+      jwt: 
+        value: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
