--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -4,4 +4,4 @@ mercure:
       url: '%env(MERCURE_URL)%'
       public_url: '%env(MERCURE_PUBLIC_URL)%'
       jwt: 
-        value: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
+        value: '%env(MERCURE_JWT_TOKEN)%'
