--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -1,7 +1,9 @@
 mercure:
   hubs:
-    name:
+    default:
       url: '%env(MERCURE_URL)%'
       public_url: '%env(MERCURE_PUBLIC_URL)%'
       jwt: 
         value: '%env(MERCURE_JWT_TOKEN)%'
+        secret: 'publish.mercure.astro-otter.space'
+        algorithm: hmac.sha256
