Fix mercure parameters

--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -4,6 +4,5 @@ mercure:
       url: '%env(MERCURE_URL)%'
       public_url: '%env(MERCURE_PUBLIC_URL)%'
       jwt: 
-        value: '%env(MERCURE_JWT_TOKEN)%'
-        secret: 'publish.mercure.astro-otter.space'
-        algorithm: hmac.sha256
+        secret: '%env(MERCURE_JWT_SECRET)%'
+        publish: '*'
