--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -4,5 +4,6 @@ mercure:
       url: '%env(MERCURE_URL)%'
       public_url: '%env(MERCURE_PUBLIC_URL)%'
       jwt: 
-        secret: '%env(MERCURE_JWT_SECRET)%'
+        value: '%env(MERCURE_JWT_SECRET)%'
+        #secret: '%env(MERCURE_JWT_SECRET)%'
         publish: '*'
